# BGR-TelemetricSystem

./: CMakeLists.txt  README.md
includes/: dbTools.h  handleMessage.h  output.h  semiBlockingQueue.h  tools.h
src/: dbTools.c  handleMessage.c  main.c  output.c  semiBlockingQueue.c  tools.c
